# auto-spotter

./: CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy-web.yml
pkg/aws/SAM/: Makefile  deploy.sh  samconfig.toml  template.yaml
